# STP_Lab8_Testing

./: CMakeLists.txt  Calculator.h  README.md  main.cpp  test_calculator.cpp  test_report.txt
